assets/css/style.css
* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background-color: rgb(163, 216, 247);
    padding-left: 6px;
}

h1 {
    font-size: 40px;
    padding-left: 0;
    border: 3px dashed black;
}

.nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 30px;
    margin-right: 30px;
    padding-right: 10px;
    background-color: beige;
    border: 1px solid navy;
    width: 20%;
    position: absolute;
    right: 0;
}

.nav a,
h3 {
    background-color: beige;
}

h2 {
    font-size: 30px;
    margin-top: 40px;
    color:rgb(35, 21, 100);
    border: 4px solid black;
}

.description {
    width: 40%;
}

.hero {
    margin: 20px 20px 0 0;
    overflow: auto;
}

.hero__image {
    display: block;
    float: right;
}

.hero__text {
    display: inline-block;
    width: 46%;
    margin-left: 15%;
}

.main {
    position: relative;
    width: 100%;
    height: 300px;
    overflow: hidden;
    margin-bottom: 30px;
}

.main img {
    position: absolute;
    width: 50%;
    height: auto;
    margin-left: 25%;
}

.main h4 {
    position: absolute;
    left: 28%;
    text-align: center;
    border: 2px solid black;
    padding: 8px;
    background-color: beige;
}

.container {
    display: flex;
    flex-direction: column;
}

.row {
    display: flex;
    margin-left: 23%;
}

.placeholder {
    flex: 1;
    height: 100px;
    margin-right: 50px;
}

/* .place img {
    position: absolute;
    width: 50%;
    height: auto;
    margin-left: 25%;
} */

.placeholder img {
    position: relative;
    height: auto;
}

.placeholder h4 {
    position: absolute;
    top: 120%;
    text-align: center;
    border: 2px solid black;
    padding: 8px;
    background-color: beige;
}

.footer {
    margin-top: 300px;
}

.footer h4 {
    margin-left: 20%;
    margin-right: 20%;
    border: 1px solid grey;
    padding-right: 10px;
}

.footer p { 
    text-align: right;
    font-weight: bold;
    margin-right: 20%;
}

@media screen and (max-width: 1080px) {
    .nav {
        float: none;
        width: 100%;
    }
}

@media screen and (min-width: 1080px) {
    .nav {
        float: none;
        width: 100%;
    }
}

